Beginning to update dependencies (#41 / #42)
The project uses several outdated dependencies including Pioneer itself but also versions of Log4J containing CVEs (Log4Shell)

closes: #41
PR: #42